User profile Form Update ui integration

--- a/styles/components/navs/sidebar.scss
+++ b/styles/components/navs/sidebar.scss
@@ -6,7 +6,7 @@
   z-index: 100;
   .sidebar-brand{
     background: #181824;
-    border-bottom: 1px solid #242424;
+    border-bottom: 1px solid #3d3c3c;
   }
   .sidebar-nav{
     min-height: calc(100vh - 64px);
