--- a/styles/components/admin.scss
+++ b/styles/components/admin.scss
@@ -1421,20 +1421,23 @@
   }
 
   .search{
-    width: 215px;
+    // width: 215px;
     button {
         background: transparent;
         position: absolute;
-        right: 2px;
+        right: 14px;
         border: 0 none;
         outline: 0 none;
         height: 30px;
-        width: 32px;
+        width: 30px;
+        padding: 4px;
+        top: 10px;
     }
     .form-control{
-      height: 32px;
-      font-size: 14px;
-      padding-right: 28px;
+      height: 54px;
+      font-size: 16px;
+      padding: 0 48px 0 30px;
+      border-radius: 30px;
     }
   } 
 
@@ -1462,7 +1465,7 @@
   }
 
   .model-content{
-    min-height: 258px;
+    min-height: 222px;
     max-height: 365px;
     overflow-y: auto;
     padding-right: 15px;
@@ -1509,4 +1512,53 @@
 
   .modal-body{
      padding-bottom: 0; 
+  }
+
+  .user-list{
+    .card{
+      border-radius: 30px;
+      height: auto;
+      min-height: auto;
+      max-height:none;
+      overflow:auto;
+      width: 90%;
+      .form-field{
+        margin-bottom: 0.1rem;
+        label{
+          line-height: 1rem;
+          text-transform: uppercase;
+          font-weight: 600;
+          font-size: .75rem;
+          display: block;
+        }
+        input{
+          padding:0 1.5rem;
+          background-color:#f5f5f5;
+          border-radius: 8px;
+          height: 48px;
+          border: 0 none;
+        }
+      }
+    }
+    .edit-card{
+      width: 98%;
+    }
+    .btn-user{
+      min-width: 120px;
+      height: 38px;
+      font-size: 14px;
+    }
+    .user-detail{
+      font-size: 16px;
+      font-weight: bold;
+    }
+     .form-field {
+      display: inline-block;
+      height: 100%;
+      width: 100%;
+     }
+  }
+  
+  body .rdt_TableCell{
+    text-transform: none;
   }
