--- a/styles/components/navs/sidebar.scss
+++ b/styles/components/navs/sidebar.scss
@@ -11,7 +11,6 @@
   .sidebar-nav{
     min-height: calc(100vh - 64px);
     background: #181824;
-    font-family: "Nunito", sans-serif;
     font-weight: 600;
     padding: 0;
     width: 258px;
@@ -47,6 +46,9 @@
             -webkit-transition-property: color;
             cursor: pointer;
             font-weight: 400;
+            &:hover{
+                color: #fff;
+            }
             .menu-title {
               color: inherit;
               display: inline-block;
