--- a/styles/components/variables.scss
+++ b/styles/components/variables.scss
@@ -40,7 +40,7 @@ $yiq-contrasted-threshold: 195 !default;
 // Typography
 $body-color: $gray-600 !default;
 
-$font-family-sans-serif: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", 'Noto Color Emoji' !default;
+//$font-family-sans-serif: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", 'Noto Color Emoji' !default;
 
 $font-weight-light: 300 !default;
 // $font-weight-base: 400;
@@ -80,7 +80,7 @@ $dropdown-border-color: $border-color;
 
 ////////// FONTS//
 
-$type1:     'Nunito', sans-serif;
+// $type1: 'Roboto', sans-serif;
 
 $default-font-size: .875rem; // 14px as base font size
 
