UI changes updated

--- a/styles/components/navs/sidebar.scss
+++ b/styles/components/navs/sidebar.scss
@@ -27,11 +27,12 @@
         margin-bottom: 60px;
         padding-top: 20px;
         .nav-item {
-          padding: 0 2.375rem;
+          padding: 0 10px;
           transition-duration: 0.25s;
           transition-property: background;
           -webkit-transition-property: background;
           position: relative;
+          margin-bottom: 2px;
           &:hover {
             background: transparent;
           }
@@ -39,7 +40,7 @@
             display: flex;
             align-items: center;
             white-space: nowrap;
-            padding: 0.925rem 0 0.625rem 0;
+            padding: 0.925rem 20px 0.925rem 25px ;
             color: #8e94a9;
             transition-duration: 0.45s;
             transition-property: color;
@@ -47,7 +48,9 @@
             cursor: pointer;
             font-weight: 400;
             &:hover{
-                color: #fff;
+                padding:  0.925rem 20px 0.925rem 25px ;
+                background: #333;
+                border-radius: 33px;
             }
             .menu-title {
               color: inherit;
@@ -56,6 +59,13 @@
               line-height: 1;
               vertical-align: middle;
           }
+        }
+      }
+      .active{
+        a{
+          background: #333;
+          padding: 0 15px;
+          border-radius: 33px;
         }
       }
     }
