--- a/styles/components/navs/topbar.scss
+++ b/styles/components/navs/topbar.scss
@@ -7,7 +7,10 @@
       border: 0;
       color: $black;
       font-size: 14px;
-      .dropdown-toggle::after{
+      
+    }
+    .dropdown-toggle{
+      &::after{
         margin-left: 10px;
         position: relative;
         top: 2px;
