--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,13 +1,12 @@
-@import './components/buttons';
-@import './components/table';
-@import './components/variables.scss';
-@import './components/utilities/typography.scss';
-@import './components/utilities/reset.scss';
+@import "./components/buttons";
+@import "./components/table";
+@import "./components/variables.scss";
+@import "./components/utilities/typography.scss";
+@import "./components/utilities/reset.scss";
 
-@import './components/navs/global';
-@import './components/navs/sidebar';
-@import './components/navs/topbar';
+@import "./components/navs/global";
+@import "./components/navs/sidebar";
+@import "./components/navs/topbar";
 
-@import './components/admin.scss';
-
-
+@import "./components/admin.scss";
+@import "./components/loader.scss";
