--- a/styles/components/variables.scss
+++ b/styles/components/variables.scss
@@ -15,7 +15,7 @@ $gray-700: #6e707e !default;
 $gray-800: #5a5c69 !default;
 $gray-900: #3a3b45 !default;
 $black: #626366 !default;
-
+$dark: #262626 !default;
 $blue: #4e73df !default;
 $indigo: #6610f2 !default;
 $purple: #6f42c1 !default;
@@ -27,8 +27,8 @@ $green: #1cc88a !default;
 $teal: #20c9a6 !default;
 $cyan: #36b9cc !default;
 
-$sidebar-light-bg: #181824;
-$sidebar-light-menu-color: #444343;
+$sidebar-bg: #262626;
+$sidebar-menu-text: #5b5a5a;
 
 // Custom Colors
 $brand-google: #ea4335;
@@ -47,8 +47,8 @@ $font-weight-light: 300 !default;
 $headings-font-weight: 400 !default;
 
 // Shadows
-$box-shadow-sm: 0 0.125rem 0.25rem 0 rgba($gray-900, .2) !default;
-$box-shadow: 0 0.15rem 1.75rem 0 rgba($gray-900, .15) !default;
+$box-shadow-sm: 0 0.125rem 0.25rem 0 rgba($gray-900, 0.2) !default;
+$box-shadow: 0 0.15rem 1.75rem 0 rgba($gray-900, 0.15) !default;
 // $box-shadow-lg: 0 1rem 3rem rgba($black, .175) !default;
 
 // Borders Radius
@@ -72,7 +72,7 @@ $spacer: 1rem;
 $grid-gutter-width: $spacer * 1.5;
 
 // Transitions
-$transition-collapse: height .15s ease !default;
+$transition-collapse: height 0.15s ease !default;
 
 // Dropdowns
 $dropdown-font-size: 0.85rem;
@@ -82,14 +82,12 @@ $dropdown-border-color: $border-color;
 
 // $type1: 'Roboto', sans-serif;
 
-$default-font-size: .875rem; // 14px as base font size
+$default-font-size: 0.875rem; // 14px as base font size
 
 $text-muted: #a7afb7;
 $body-color: #a7afb7;
 
-$btn-font-size:       12px;
-$btn-font-size-xs:    .625rem;
-$btn-font-size-sm:    .875rem;
-$btn-font-size-lg:    .875rem;
-
-
+$btn-font-size: 12px;
+$btn-font-size-xs: 0.625rem;
+$btn-font-size-sm: 0.875rem;
+$btn-font-size-lg: 0.875rem;
