--- a/styles/components/variables.scss
+++ b/styles/components/variables.scss
@@ -13,8 +13,8 @@ $gray-500: #b7b9cc !default;
 $gray-600: #858796 !default;
 $gray-700: #6e707e !default;
 $gray-800: #5a5c69 !default;
-$gray-900: #3a3b45 !default;
-$black: #626366 !default;
+$gray-900: #3a3a3a !default;
+$black: #202020 !default;
 $dark: #262626 !default;
 $blue: #4e73df !default;
 $indigo: #6610f2 !default;
@@ -29,6 +29,8 @@ $cyan: #36b9cc !default;
 
 $sidebar-bg: #262626;
 $sidebar-menu-text: #5b5a5a;
+
+$secondary: "#5b5a5a";
 
 // Custom Colors
 $brand-google: #ea4335;
