--- a/styles/components/navs/sidebar.scss
+++ b/styles/components/navs/sidebar.scss
@@ -14,6 +14,17 @@
     z-index: 11;
     color: $sidebar-menu-text;
 
+    &::-webkit-scrollbar {
+      width: 6px;
+    }
+    &::-webkit-scrollbar-track {
+      background: #222222;
+    }
+    &::-webkit-scrollbar-thumb {
+      background: #5b5a5a;
+      border-radius: 10px;
+    }
+
     .nav-item {
       padding: 1rem 0;
       padding-left: 15%;
