added 404 page and media query for mobile devices - to give error

--- a/styles/components/admin.scss
+++ b/styles/components/admin.scss
@@ -1668,3 +1668,7 @@ body.sidebar-toggled footer.sticky-footer {
 body .rdt_TableCell {
   text-transform: none;
 }
+
+.error-page-404 {
+  font-size: 60px;
+}
